  (Jon Ludlam, KC Sivaramakrishnan and Tom Kelly)

- #11054: Respect user provided maximum stack space
  Make sure the stack we initially request is sized accordingly to
  the user provided settings. tmc/stack_space is also updated by
  this PR in order to account for this change.
  (Enguerrand Decorne, report by Jon Ludlam,
  review by Tom Kelly, KC Sivaramakrishnan and Gabriel Scherer)

### Code generation and optimizations:

- #10972: ARM64 multicore support: OCaml & C stack separation;
  dynamic stack size checks; fiber and effects support.
  (Tom Kelly and Xavier Leroy, review by KC Sivaramakrishnan, Xavier Leroy
  Guillaume Munch-Maccagnoni, Eduardo Rafael, Stephen Dolan and
  Gabriel Scherer)

### Standard library:

- #10742: Use LXM as the pseudo-random number generator for module Random.
  Add `Random.State.split` and `Random.split` to "split" a PRNG off
  another PRNG.
  (Xavier Leroy, review by Gabriel Scherer and Hugo Heuzard)

* #10867: Remove deprecated values: Array.create, Array.make_float,
  Array.create_matrix, Bytes.uppercase, Bytes.lowercase, Bytes.capitalize,
  Bytes.uncapitalize, Char.lowercase, Char.uppercase, Filename.temp_dir_name,
  Int32.format, Int64.format, Nativeint.format, Format.bprintf, Format.kprintf,
  Format.set_all_formatter_output_functions,
  Format.get_all_formatter_output_functions,
  Format.pp_set_all_formatter_output_functions,
  Format.pp_get_all_formatter_output_functions, Format.pp_open_tag,
  Format.pp_close_tag, Format.open_tag, Format.close_tag,
  Format.formatter_tag_functions, Format.pp_set_formatter_tag_functions,
  Format.pp_get_formatter_tag_functions, Format.set_formatter_tag_functions,
  Format.get_formatter_tag_functions, Gc (mutability of the fields of type
  Gc.control), Lazy.lazy_from_fun, Lazy.lazy_from_val, Lazy.lazy_is_val,
  Obj.set_tag, Obj.truncate, Obj.final_tag, Obj.extension_constructor,
  Obj.extension_name, Obj.extension_id, Scanf.stdib, Scanf.fscanf,