@@ -253,6 +253,4 @@ let get_id { domain; _ } = domain
 
 let self () = Raw.self ()
 
-external set_name : string -> unit = "caml_ml_domain_set_name"
-
 let is_main_domain () = (self () :> int) == 0
