@@ -60,11 +60,6 @@ val cpu_relax : unit -> unit
 (** If busy-waiting, calling cpu_relax () between iterations
     will improve performance on some CPU architectures *)
 
-val set_name : string -> unit
-(** [set_name s] set the domain's thread name to [s]. [s] should not be longer
-    than 15 characters. If [s] is longer than 15 characters,
-    raise Invalid_argument. *)
-
 val is_main_domain : unit -> bool
 (** [is_main_domain ()] returns true if called from the initial domain. *)
 
